Update PersonController methods

--- a/02_RestWithAsp-NET_Calculator/RestWithAspNet/RestWithAspNet/Properties/launchSettings.json
+++ b/02_RestWithAsp-NET_Calculator/RestWithAspNet/RestWithAspNet/Properties/launchSettings.json
@@ -32,7 +32,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "Calculador/",
+      "launchUrl": "api/person",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
