--- a/02_RestWithAsp-NET/RestWithAspNet/RestWithAspNet/appsettings.json
+++ b/02_RestWithAsp-NET/RestWithAspNet/RestWithAspNet/appsettings.json
@@ -2,7 +2,13 @@
   "ConnectionStrings": {
     "DefaultConnection" : "server=localhost;userid=root;password=;database=rest_with_aspnet"
   },
-
+  "TokenConfigurations": {
+    "Audience": "Audiencia 1",
+    "Issuer" :  "ExemploIssuer",
+    "Secret": "MY_SECRET_KEY",
+    "Minutes": 60,
+    "DaysToExpire": 7
+  }
   "Logging": {
     "LogLevel": {
       "Default": "Information",
