--- a/02_RestWithAsp-NET/RestWithAspNet/RestWithAspNet/RestWithAspNet.csproj
+++ b/02_RestWithAsp-NET/RestWithAspNet/RestWithAspNet/RestWithAspNet.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Asp.Versioning.Mvc" Version="7.0.0" />
     <PackageReference Include="Evolve" Version="3.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.0" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.3.1" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
     <PackageReference Include="Serilog" Version="3.1.1" />
