auth bug fixed

--- a/02_RestWithAsp-NET/RestWithAspNet/RestWithAspNet/appsettings.json
+++ b/02_RestWithAsp-NET/RestWithAspNet/RestWithAspNet/appsettings.json
@@ -3,9 +3,9 @@
     "DefaultConnection" : "server=localhost;userid=root;password=;database=rest_with_aspnet"
   },
   "TokenConfigurations": {
-    "Audience": "Audiencia 1",
+    "Audience": "Audiencia1",
     "Issuer" :  "ExemploIssuer",
-    "Secret": "MY_SECRET_KEY",
+    "Secret": "MY_NEWEST_SUPER_SUPER_SECRET_KEY",
     "Minutes": 60,
     "DaysToExpire": 7
   },
